# substrate-piedra-papel-tijera

./: Cargo.toml  README.md  customSpec.json  customSpecRaw.json
node/: Cargo.toml
pallets/piedra-papel-tijera/: Cargo.toml
pallets/piedra-papel-tijera/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  tipos.rs  utils.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
